--- a/css.css
+++ b/css.css
@@ -2,7 +2,7 @@
     font-family: Arial, sans-serif;
     margin: 0;
     background: url(paste.jpg) ;
-    background-size:500px;
+    background-size:700px;
     
 
 
@@ -91,9 +91,10 @@ button:hover{
 .social-media-button {
     padding: 10px;
     background-color: lightskyblue;
-    display:inline;
+    display:flex;
     align-items:center;
     justify-content:center;
+    
     
 }
  
