--- a/css.css
+++ b/css.css
@@ -2,7 +2,7 @@
     font-family: Arial, sans-serif;
     margin: 0;
     background: url(paste.jpg) ;
-    background-size:700px;
+    background-size:100%;
     
 
 
