--- a/css.css
+++ b/css.css
@@ -1,7 +1,7 @@
 .body { 
     font-family: Arial, sans-serif;
     margin: 0;
-    background: url(paste.jpg) no repeat;
+    background: url(paste.jpg) no-repeat 500px;
     background-size:100%;
     
 
